--- a/template/tem-of.html
+++ b/template/tem-of.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- saved from url=(0025)http://www.jekyllnow.com/ -->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,23 +11,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="A creative coding program since fall 2014 in NYC.">
     <meta name="keywords" content="OF COURSE, creativecoding, processing, openframeworks">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link href='https://dn-maxiang.qbox.me/res-min/themes/marxico.css' rel='stylesheet'>
-    <link rel="shortcut icon" type="image/ico" href="assets/img/logo.png">
+    <link rel="shortcut icon" type="image/ico" href="../assets/img/logo.jpg">
 </head>
 <body>
 <div class="wrapper-masthead">
     <div class="of-container">
         <header class="masthead clearfix">
-            <a href="" class="site-avatar"><img src="assets/img/logo.png"></a>
+            <a href="../" class="site-avatar"><img src="../assets/img/logo.jpg"></a>
             <div class="site-info">
-                <p class="site-name"><strong><a href="">RESOURCE</a></strong></p>
+                <p class="site-name"><strong><a href="../">RESOURCE</a></strong></p>
                 <p class="site-description">Creative Coding Resources.</p>
             </div>
             <nav>
-                <a href="openframeworks">Openframeworks</a>
-                <a href="processing">Processing</a>
-                <a href="about">About</a>
+                <a href="../openframeworks">Openframeworks</a>
+                <a href="../processing">Processing</a>
+                <a href="../about">About</a>
             </nav>
         </header>
     </div>
@@ -34,7 +35,7 @@
 <div id="main" role="main" class="of-container">
     <div class="posts">
         <article class="post">
-            <h1>Newest...</h1>
+            <h1>Openframeworks...</h1>
             <%= documentHTML %>
         </article>
     </div>
