--- a/template/tem-p5.html
+++ b/template/tem-p5.html
@@ -43,9 +43,25 @@
 <div class="wrapper-footer">
     <div class="of-container">
         <footer class="footer">
-            <a href="https://github.com/ofcourseio"><i class="svg-icon github"></i></a>
-            <a href="https://www.facebook.com/ofcourse.io/"><i class="svg-icon facebook"></i></a>
-            <a href="https://www.linkedin.com/company/of-course"><i class="svg-icon linkedin"></i></a>
+            <a href="https://github.com/ofcourseio" title="Github" target="_blank"><i
+                    class="svg-icon github"></i></a>
+            <a href="https://www.linkedin.com/company/of-course" title="Linkedin" target="_blank"><i
+                    class="svg-icon linkedin"></i></a>
+            <a href="http://weibo.com/ofcouseshanghai" title="微博：@OFCOURSE创意编程" target="_blank"><i
+                    class="svg-icon weibo"></i></a>
+            <a href="http://weixin.sogou.com/gzh?openid=oIWsFt7PA6VTBN3iNP4W12fou3Xg&ext=D4y5Z3wUwj6wokqoXut6AaB-8gtfF5HHqE1znPfETVO7aEUMo-CwvEiTEZmm2Ylj"
+               title="微信平台：@ofcourse_cn" target="_blank"><i
+                    class="svg-icon wechat"></i></a>
+            <a href="https://www.facebook.com/ofcourse.io/" title="Facebook" target="_blank"><i
+                    class="svg-icon facebook"></i></a>
+            <a href="https://www.twitter.com/ofcourseio/" title="Twitter" target="_blank"><i
+                    class="svg-icon twitter"></i></a>
+            <a href="https://www.twitter.com/ofcourseio/" title="Tumblr" target="_blank"><i
+                    class="svg-icon tumblr"></i></a>
+            <a href="http://ofcourseio.lofter.com/" title="Lofter" target="_blank"><i
+                    class="svg-icon lofter"></i></a>
+            <a href="mailto:info@ofcourse.io" title="联系邮箱：info@ofcourse.io"><i
+                    class="svg-icon email"></i></a>
         </footer>
     </div>
 </div>
