--- a/template/tem-about.html
+++ b/template/tem-about.html
@@ -38,6 +38,30 @@
             <h1>About...</h1>
             <%= documentHTML %>
         </article>
+        <div class="post">
+            <h2>Messages</h2>
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                var host_port = window.location.protocol + "//" + window.location.host;
+                        var url = window.location.href;
+                        var disqus_shortname = 'ofresource';
+                        var disqus_identifier = url.substring(host_port.length, url.length);
+                        var disqus_title = document.title;
+                        var disqus_url = url;
+                        /*var disqus_developer = 1;*/
+                        (function() {
+                                var dsq = document.createElement('script');
+                                dsq.type = 'text/javascript';
+                                dsq.async = true;
+                                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+            </script>
+            <noscript>
+                Please enable JavaScript to view the
+                <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+            </noscript>
+        </div>
     </div>
 </div>
 <div class="wrapper-footer">
