update tumblr address

--- a/template/tem-of.html
+++ b/template/tem-of.html
@@ -56,7 +56,7 @@
                     class="svg-icon facebook"></i></a>
             <a href="https://www.twitter.com/ofcourseio/" title="Twitter" target="_blank"><i
                     class="svg-icon twitter"></i></a>
-            <a href="https://www.twitter.com/ofcourseio/" title="Tumblr" target="_blank"><i
+            <a href="http://ofcourseio.tumblr.com/" title="Tumblr" target="_blank"><i
                     class="svg-icon tumblr"></i></a>
             <a href="http://ofcourseio.lofter.com/" title="Lofter" target="_blank"><i
                     class="svg-icon lofter"></i></a>
